Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-38641

Failure of Replication of system versioning tables

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 12.3
    • 12.3.1
    • Replication
    • None
    • Not for Release Notes
    • Q1/2026 Server Maintenance

    Description

      MDEV-36290 : Improved support of replication between tables of different structure

      ./mtr rpl_system_versioning.test --mariadbd=--binlog-format=ROW --mariadbd=--system_versioning_alter_history=KEEP --mariadbd=--binlog-row-metadata=FULL
      
      

      --source include/master-slave.inc
       
      CREATE TABLE t1 (
        id INT PRIMARY KEY,
        a  INT,
        b  INT,
        c  INT
      ) ENGINE=Aria
      WITH SYSTEM VERSIONING;
       
      INSERT INTO t1 VALUES (1,10,20,30);
       
      SET SESSION SQL_LOG_BIN=0;
      ALTER TABLE t1 ADD COLUMN mid INT AFTER a;
      SET SESSION SQL_LOG_BIN=1;
       
      --connection slave
      ALTER TABLE t1 DROP COLUMN c;
       
      --connection master
      UPDATE t1 SET mid = 100 WHERE id = 1;
      UPDATE t1 SET b   = 200 WHERE id = 1;
       
       
      --sleep 1
      --sync_slave_with_master
      
      

      Relevant error log:

      2026-01-23 13:02:15 8 [Warning] Slave SQL: Table structure for binlog event is not compatible with the table definition on this slave: Column 'b' missing from table 'test.t1', Gtid 0-1-770, Internal MariaDB error code: 4242
      2026-01-23 13:02:15 8 [Warning] Slave SQL: Table structure for binlog event is not compatible with the table definition on this slave: Column 'b' missing from table 'test.t1', Gtid 0-1-771, Internal MariaDB error code: 4242
      mariadbd: /home/brandon/workspace/server/sql/rpl_utility_server.cc:1058: bool RPL_TABLE_LIST::give_compatibility_error(rpl_group_info *, uint): Assertion `m_tabledef.master_column_name[col]' failed.
      260123 13:02:15 [ERROR] /home/brandon/workspace/server/build/sql/mariadbd got signal 6 ;
      

      Attachments

        Issue Links

          Activity

            People

              bnestere Brandon Nesterenko
              Deepthi ES Deepthi Eranti Sreenivas
              Brandon Nesterenko Brandon Nesterenko
              Deepthi Eranti Sreenivas Deepthi Eranti Sreenivas
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.